--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p>
                     Get ready to experience the ultimate in relaxation and self-care! Dream Night is proud to announce the opening of our first off-line store in Ottawa. 
                 </p>
-                <p>address <a href="#">Wellington St, Ottawa, ON K1A 0A9</a></p>
+                <p>Address: <a href="#">Wellington St, Ottawa, ON K1A 0A9</a></p>
                 <p>Opening: Mon - Fri 08:00 - 18:00</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.4914178672984!2d-75.71181921012548!3d45.41959436183835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce045a7a4831e5%3A0xcb7f2bab75407e44!2sWellington%20St!5e0!3m2!1sen!2sca!4v1688007870948!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
